Module 16 - Enterprise Pattern/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>